Feature displayedProperties: we now have displayed properties